# engram

./: .gitignore  README.md  pyproject.toml
experiments/: cartpole.ipynb
notebooks/: cartpole.ipynb
src/engram/: __init__.py  buffer.py
src/engram/data/: buffer.py
src/engram/dreamerv3/: agent.py  dream.py
src/engram/loss/: actor.py  critic.py  world_model.py
src/engram/losses/: world_model.py
src/engram/models/: dreamer.py
src/engram/nets/: activations.py  mlp.py
src/engram/nn/: memory.py
src/engram/rl/: dreamerv3.py  policy.py  returns.py  rssm.py
src/engram/tools/: buffer.py  checkpoint.py  conditionals.py  ema.py  gym.py  probability.py  two_hot.py
tests/engram/: test_buffer.py
tests/engram/data/: test_buffer.py
tests/engram/dreamerv3/: test_agent_smoke.py
tests/engram/loss/: test_actor.py  test_critic.py  test_world_model.py
tests/engram/nets/: test_activations.py  test_mlp.py
tests/engram/nn/: test_memory.py
tests/engram/rl/: test_policy.py  test_returns.py  test_rssm.py
tests/engram/tools/: test_buffer.py  test_checkpoint.py  test_conditionals.py  test_ema.py  test_gym.py  test_probability.py  test_two_hot.py
