[project]
name = "engram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Zyskowski", email = "ktzyskowski@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pytest>=9.0.2",
    "torch>=2.11.0",
]

[project.scripts]
engram = "engram:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
