[project]
name = "engram"
version = "1.0.0"
description = "Engram MBRL algorithm."
readme = "README.md"
authors = [{ name = "Kevin Zyskowski", email = "ktzyskowski@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d]>=1.0.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pytest>=9.0.2",
    "swig>=4.4.1",
    "torch>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
